[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/fx/environment/WorldEnvironment.tres" type="Environment" id=1]
[ext_resource path="res://game/rooms/GameRoom.gd" type="Script" id=2]
[ext_resource path="res://game/rooms/BreakableFloor.tscn" type="PackedScene" id=4]

[node name="GameRoom" type="Spatial"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="GIProbe" type="GIProbe" parent="."]

[node name="BreakableFloor" parent="." instance=ExtResource( 4 )]

[node name="NextRoomSpawn" type="Position3D" parent="."]

[node name="PrevRoomSpawn" type="Position3D" parent="."]

[connection signal="floor_break" from="BreakableFloor" to="." method="_on_BreakableFloor_floor_break"]
